--- a/index.html
+++ b/index.html
@@ -8,10 +8,20 @@
         <meta name="robots" content="index, follow" />
         <link rel="stylesheet" href="/css/universe.css" media="all" />
         <script src="//ajax.googleapis.com/ajax/libs/jquery/1.5.1/jquery.js"></script>
-        <script src="/life.js"></script>
+        <script src="/js/life.js"></script>
         <script>
             $(document).ready(function(){
-                life.createUniverse('#universe');
+                var myLife;
+                myLife = life.createUniverse('#universe', {
+                    hasGrid:false,
+                    debugMode:true,
+                    celSize:6,
+                    cycleTime:200
+                });
+
+                $("#showGrid").click(function(){
+                    myLife.setGridEnabled(this.checked);
+                });
             });
         </script>
     </head>
@@ -19,7 +29,12 @@
         <a href="https://github.com/nocturnalfrog/living-canvas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
 
         <footer>
-            <h1>Living Canvas</h1>
+            <div class="inner">
+                <h1>Living Canvas</h1>
+                <div class="controls">
+                    <label><input type="checkbox" id="showGrid" name="showGrid" value="">Show Grid</label><br>
+                </div>
+            </div>
         </footer>
 
         <canvas id="universe">
