Reset Universe when it expands.

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
                     hasGrid:false,
                     debugMode:true,
                     celSize:6,
-                    cycleTime:200
+                    cycleTime:500
                 });
 
                 $("#showGrid").click(function(){
@@ -30,6 +30,9 @@
 
         <footer>
             <div class="inner">
+                <div class="cogwheel">
+                    COG
+                </div>
                 <h1>Living Canvas</h1>
                 <div class="controls">
                     <label><input type="checkbox" id="showGrid" name="showGrid" value="">Show Grid</label><br>
