--- a/index.html
+++ b/index.html
@@ -11,33 +11,73 @@
         <script src="/js/life.js"></script>
         <script>
             $(document).ready(function(){
+                var celSize = 20;
+                $("#celsize").val(celSize);
+
+                var cycleTime = 1000/1;
+                $("#delay").val(cycleTime);
+
                 var myLife;
                 myLife = life.createUniverse('#universe', {
                     hasGrid:false,
                     debugMode:true,
-                    celSize:10,
-                    cycleTime:800
+                    celSize:celSize,
+                    cycleTime: cycleTime
                 });
+                myLife.startEvolving();
 
                 $("#showGrid").click(function(){
                     myLife.setGridEnabled(this.checked);
+                });
+
+                $("#startstop").click(function(){
+                    myLife.toggleEvolution();
+                });
+
+                $("#reset").click(function(){
+                    myLife.resetUniverse();
+                });
+
+                $("#delay").change(function(){
+                    var newCycleTime = $("#delay").val();
+                    myLife.setCycleTime(newCycleTime);
+                });
+
+                $("#celsize").change(function(){
+                    var newCelSize = $("#celsize").val();
+                    myLife.setCelSize(newCelSize);
                 });
             });
         </script>
     </head>
     <body>
-       <canvas id="universe">
+        <canvas id="universe">
             <strong>Your browser does not support canvas. You should probably upgrade and come back.</strong>
         </canvas>
         <a href="https://github.com/nocturnalfrog/living-canvas"><img style="position: absolute; top: 0; right: 0; border: 0;" src="https://s3.amazonaws.com/github/ribbons/forkme_right_darkblue_121621.png" alt="Fork me on GitHub"></a>
         <footer>
             <div class="inner">
-                <div class="cogwheel">
-                    COG
+                <div class="settings-toggle">
+                    <div class="cogwheel">COG</div>
+                    <h1>Living Canvas</h1>
                 </div>
-                <h1>Living Canvas</h1>
                 <div class="controls">
-                    <label><input type="checkbox" id="showGrid" name="showGrid" value="">Show Grid</label><br>
+                    <div class="buttons">
+                        <button class="button" id="startstop">start/stop</button>
+                        <button class="button" id="reset">reset</button>
+                    </div>
+                    <div class="range-slider">
+                        <label>Delay: </label><br>
+                        <input type="range" name="delay" id="delay" min="20" max="2000"><br>
+                    </div>
+
+                    <div class="range-slider">
+                        <label>Size: </label><br>
+                        <input type="range" name="size" id="celsize" min="4" max="200"><br>
+                    </div>
+                    <div class="advanced">
+                        <label><input type="checkbox" id="showGrid" name="showGrid" value="">Show Grid</label><br>
+                    </div>
                 </div>
             </div>
         </footer>
